--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -49,7 +49,6 @@ legend("topright", legend = c("Mean", "Median"), col=c(1,2), lty=c(1,2))
 
 ```{r}
 library(knitr)
-#kable(STATS, digits=2)
 STATS
 ```
 
@@ -86,7 +85,6 @@ kable(summary(import.data))
 #### **In total 2304 missing values in variable steps. 8 days are missing step values**
 
 ```{r}
-#kable(STATS[c(1,8,32,35,40,41,45,61),c(1,2)])
 STATS[c(1,8,32,35,40,41,45,61),c(1,2)]
 ```
 
@@ -115,7 +113,6 @@ import.data.imputed <- import.data.imputed[,c(2,5,3,1)]
 
 ```{r}
 library(knitr)
-#kable(head(import.data.imputed, n=50))
 head(import.data.imputed, n=50)
 ```
 
@@ -147,7 +144,6 @@ legend("topright", legend = c("Mean", "Median"), col=c(1,2), lty=c(1,2))
 ```
 
 ```{r}
-#kable(STATS3)
 STATS3
 ```
 
@@ -163,7 +159,7 @@ import.data.imputed$weekend <- isWeekend(import.data.imputed$date, wday = 1:5)
 import.data.imputed$day <- import.data.imputed$weekday
 import.data.imputed$day[import.data.imputed$day == TRUE] <- "WEEKDAY"
 import.data.imputed$day[import.data.imputed$day == FALSE] <- "WEEKEND"
-kable(head(import.data.imputed, n=10))
+head(import.data.imputed, n=10)
 ```
 
 ```{r, fig.width=8, fig.height=6}
